fixed spacing after timecode. Added grey color to timecode.

--- a/css/nbconvert.css
+++ b/css/nbconvert.css
@@ -11,6 +11,7 @@ div.notebook {
 }
 
 div.notebook label.github-last-update {
+  color:grey;
   font-weight:200;
   display: inline;
 }
